2003-05-12  Ross Burton  <ross@burtonini.com>

	* README: New and improved README file.

2003-05-09  Ross Burton  <ross@burtonini.com>

	* src/dh-html-gtkhtml2.c: Fix a cast and dereference which should
	have been updated long ago. Fixes a rare crasher.

2003-05-07  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2003-04-24  Mikael Hallendal <micke@codefactory.se>

        * Release 0.6.0

        * Makefile.am: Added mime_DATA to EXTRA_DIST.

        * configure.in: Updated to version 0.6.0
	
	* NEWS: Updated with news for version 0.6.0

2003-04-09  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "hi" to ALL_LINGUAS

2003-04-05  Samúel Jón Gunnarsson <sammi@techattack.nu>

	* configure.in: Added "is" to ALL_LINGUAS

2003-03-14  Mikael Hallendal  <micke@codefactory.se>

	* src/Makefile.am: fix building of marshals.

2003-03-13  Ross Burton  <ross@burtonini.com>

	* src/dh-window.c: Removed dead code. Will add it again in the
	correct location later.

	* src/dh-parser.c: Display the line and column numbers in error
	messages.

2003-03-13  Mikael Hallendal  <micke@codefactory.se>

	* src/dh-marshal.list: updated

	* src/dh-book-tree.c: use dh_marshals
	* src/dh-html-mozilla.c: same
	* src/dh-search.c: same
	* src/dh-html-gtkhtml2.c: same
	* src/dh-history.c: same

2003-03-12  Ross Burton  <ross@burtonini.com>

	* devhelp.keys.in, devhelp.mime: Added gnome-vfs MIME files to map
	.devhelp to application/x-devhelp.

	* Makefile.am: Cleanup, and install the MIME files.

	* devhelp.schemas: Removed, not used any more.

	* debian/: Removed, very out of date.

2003-03-07  Ross Burton  <ross@burtonini.com>

	* AUTHORS: Add myself.

	* src/dh-window.c: Ditto

	* src/dh-base.c (base_init_books): Scan $PREFIX/share/devhelp/books
	and ~/.devhelp/books (instead of ~/.devhelp2).

	* src/dh-main.c (dh_create_socket): Remove an unused variable.

	* src/dh-parser.c: Add lots and lots of error messages. Also use